# haskell-trace-sdk

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  README.md  instana-haskell-trace-sdk.cabal  package.yaml  readme.markdown  span_format_notes.txt  stack.yaml
.circleci/: config.yml
.github/workflows/: release.yaml
docker/stack-run-extended/: Dockerfile
example-app/: Main.hs
misc/: logging-test-cases.txt
sample-app/: Main.hs
src/Instana/SDK/: Config.hs  SDK.hs  TracingHeaders.hs
src/Instana/SDK/Internal/: Command.hs  Config.hs  Context.hs  FullSpan.hs  Id.hs  Logging.hs  Retry.hs  Secrets.hs  ServerTiming.hs  SpanStack.hs  URL.hs  Util.hs  W3CTraceContext.hs  WireSpan.hs  Worker.hs
src/Instana/SDK/Internal/AgentConnection/: AgentHostLookup.hs  AgentReady.hs  Announce.hs  ConnectLoop.hs  DefaultGatewayIp.hs  Paths.hs  ProcessInfo.hs  SchedFile.hs
src/Instana/SDK/Internal/AgentConnection/Json/: AnnounceResponse.hs  Util.hs
src/Instana/SDK/Internal/Metrics/: Collector.hs  Compression.hs  Deltas.hs  Json.hs  Sample.hs
src/Instana/SDK/Span/: EntrySpan.hs  ExitSpan.hs  NonRootEntry.hs  RootEntry.hs  SimpleSpan.hs  Span.hs  SpanData.hs  SpanType.hs
src/Instana/Wai/Middleware/: Entry.hs
src/Instana/Wai/Middleware/Entry/: Internal.hs
test/agent-stub/: Main.hs
test/agent-stub/Instana/SDK/AgentStub/: API.hs  Config.hs  Logging.hs  Main.hs  Recorders.hs  Server.hs  StubAPI.hs  StubServer.hs  Util.hs
test/apps/downstream-target/: Main.hs
test/apps/wai/: Main.hs
test/apps/wai-with-middleware/: Main.hs
test/integration/: Main.hs  README.md
test/integration/Instana/SDK/IntegrationTest/: BracketApi.hs  Connection.hs  CustomSecrets.hs  ExtraHttpHeaders.hs  HUnitExtra.hs  HighLevelApi.hs  HttpHelper.hs  HttpTracing.hs  HttpTracingHeaders.hs  Logging.hs  LowLevelApi.hs  Metrics.hs  Runner.hs  ServiceName.hs  SpecCompliance.hs  Suite.hs  TestHelper.hs  TestSuites.hs  Util.hs  WaiMiddleware.hs  tracer_compliance_test_cases.json
test/shared/Instana/SDK/AgentStub/: CounterMetric.hs  DiscoveryRequest.hs  DiscoveryResponse.hs  EntityDataRequest.hs  GaugeMetric.hs  LabelMetric.hs  TraceRequest.hs
test/unit/: Main.hs
test/unit/Instana/SDK/: SpanDataTest.hs  SpanTest.hs  TracingHeadersTest.hs
test/unit/Instana/SDK/Internal/: ConfigTest.hs  IdTest.hs  LoggingTest.hs  MetricsCompressionTest.hs  SecretsTest.hs  ServerTimingTest.hs  SpanStackTest.hs  SpanTest.hs  W3CTraceContextTest.hs
test/unit/Instana/SDK/Internal/AgentConnection/: DefaultGatewayIpTest.hs  SchedFileTest.hs
test/unit/Instana/SDK/Internal/Metrics/: CompressionTest.hs  DeltasTest.hs
